@@ -19,9 +19,15 @@ pipeline {
       }
       steps{
           script {
-            sh "npm set strict-ssl false; npm config set @ina:registry https://repo.sas.ina/repository/npm-snapshots;  npm install ; npm run build-test; "
+            sh "npm set strict-ssl false; npm config set @ina:registry https://repo.sas.ina/repository/npm-snapshots;  npm install; "
           }
       }
+        stage('SonarQube analysis') {
+            withSonarQubeEnv('sonar.priv.ina') {
+                def scannerHome = tool 'sonar';
+                sh "export SONAR_SCANNER_OPTS='-Xmx1024m -XX:MaxPermSize=512m'; ${scannerHome}/bin/sonar-scanner -Dsonar.projectKey='Amalia' -Dsonar.projectName='Amalia' -Dsonar.projectVersion='2.0' -Dsonar.sourceEncoding='UTF-8' -Dsonar.forceAnalysis='true' -Dsonar.projectBaseDir=. -Dsonar.sources=src/. -Dsonar.sonar.exclusions='**.spec.ts,**.mock.ts' -Dsonar.typescript.lcov.reportPaths=./coverage/amalia/lcov.info"
+            }
+        }
     }
   }
 }
